--- a/Management_API/.gitignore
+++ b/Management_API/.gitignore
@@ -2,4 +2,4 @@ node_modules/
 serviceAccountKey.json/
 .vscode/
 echo ".env" >> .gitignore
-Management_API/serviceAccountKey.json/
+Management_API/serviceAccountKey.json/ // add something
